--- a/form1.html
+++ b/form1.html
@@ -49,7 +49,7 @@
         <p>이름: <span v-if="chk == true">{{name}}</span></p>
         <p>성별: <span v-if="chk == true">{{gender}}</span></p>
         <p>전공: <span v-if="chk == true">{{major}}</span></p>
-        <p>활성화: <span v-if="chk == true">{{chk}}</span></p>
+        <p>활성화: {{chk}}</p>
     </div>
     <script>
         let app = {
