--- a/empty1.html
+++ b/empty1.html
@@ -78,10 +78,10 @@
             },
             methods: {
                 errorHide1(){
-                    this.showError1=false;
+                    this.showError1=this.email.trim()==="" // true -> showError를 보여줌
                 },
                 errorHide2(){
-                    this.showError2=false;
+                    this.showError2=this.phone.trim()==="";
                 },
                 errorHide3(){
                     this.showError3=false;
