--- a/test2.html
+++ b/test2.html
@@ -39,6 +39,7 @@
         <div>
             수량 <input type="text" v-model="수량"><br>
             가격 <input type="text" v-model="가격"><br>
+            합계 <input type="text" v-model="total5"><br>
             <div>
                 총합 : {{수량*가격}} <br>
                 {{total()}}<br>
@@ -75,9 +76,18 @@
                     let 총합 = this.수량*this.가격;
                     let s = String(총합);
                     for(let i = 3; s.length>i; i+=4){
-                        s = s.slice(0, -i) + "," +s.slice(-i); // 음수는 오른쪽부터
+                        s = s.slice(0, -i) + "," +s.slice(-i); // -1 맨오른쪽 끝자리
                     }
                     return s;
+                },
+                // 리액트에 useState랑 비슷함
+                total5:{
+                    get(){
+                        return this.수량*this.가격;
+                    },
+                    set(value){
+                        this.수량 = value/this.가격;
+                    }
                 }
             }
         }
