--- a/for1.html
+++ b/for1.html
@@ -37,7 +37,7 @@
         <hr>
         <p v-for="r in row">
             <span v-for="c in col">
-                {{(r-1) * row + c}} -
+                {{(r-1) * col + c}} |
             </span>
         </p>
 
